--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 html {box-sizing: border-box;}
 *, *:before, *:after {box-sizing: inherit;}
 
+a:hover {
+  text-decoration: none;
+}
+
 .container {
-    height: 100vh;
+    min-height: 100vh;
     overflow: hidden;
+    max-width: 1170px;
 }
 
 body {
@@ -189,18 +194,15 @@ body {
     /*min-height: 600px;*/
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     padding: 0;
+
 }
 
 .articles li {
-    list-style: none;
-    width: 32%;
-    display: inline-block;
-    overflow: hidden;
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    vertical-align: top;
     margin-top: 20px;
-    height: 320px;
 }
 
 .articles li:hover .title {
@@ -208,17 +210,14 @@ body {
 }
 
 .articles li img {
-    position: absolute;
-    width: 100%;
-    /*height: 65%;*/
+  height: inherit;
+  width: 100%;
 }
 
 span.articleText {
-    width: 100%;
-    position: absolute;
+    display: block;
     color: #000;
-    bottom: 10px;
-    height: 25%;
+    margin-top: 20px;
 }
 
 span.title {
@@ -234,29 +233,22 @@ span.txtDate {
 
 /* Media Queries */
 
-@media only screen and (max-device-width: 480px){
-/*    .slider ul {
-      width: 100%;
-    }*/
-    .slider ul li {
+@media (min-width: 320px) and (max-width: 480px) {
+  .col-xs-12 {
+      /*width: 100% !important;*/
 
-    }
-/*
-    .articles li {
-        width: 100% !important;
-        height: 300px;
-    }*/
-
+  }
 }
 
-@media screen and (max-width: 1200px){
-    .slider ul li {
-        width: 300px;
-    }
-
-    .articles li {
-        width: 48%;
-        height: 300px;
-    }
-
+@media (min-width: 481px) {
+  .col-sm-6 {
+      /*width: 49%;*/
+  }
 }
+
+@media (min-width: 992px) {
+  .col-md-4 {
+      /*width: 32%;*/
+  }
+}
+
